feat: add pocketbase-cursor-mcp

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,18 @@
 # PocketBase server URL (required)
 # Example: http://127.0.0.1:8090 for local development
+# Cũng có thể được cung cấp qua command line: --url=http://127.0.0.1:8090
 POCKETBASE_URL=http://127.0.0.1:8090
 
 # Optional: Admin credentials if needed for certain operations
+# Cũng có thể được cung cấp qua command line: --admin-email=... --admin-password=...
 # POCKETBASE_ADMIN_EMAIL=admin@example.com
 # POCKETBASE_ADMIN_PASSWORD=your-secure-password
 
 # Optional: Custom data directory path
+# Cũng có thể được cung cấp qua command line: --data-dir=...
 # POCKETBASE_DATA_DIR=/path/to/pb_data
+
+# Optional: Server configuration for Cursor AI integration
+# Cũng có thể được cung cấp qua command line: --port=... --host=...
+# PORT=3000                 # Port for HTTP server, if used instead of STDIO
+# HOST=localhost            # Host for HTTP server, if used instead of STDIO
