--- a/package.json
+++ b/package.json
@@ -1,18 +1,37 @@
 {
-  "name": "pocketbase-server",
-  "version": "0.1.0",
+  "name": "pocketbase-cursor-mcp",
+  "version": "0.1.2",
   "type": "module",
+  "description": "PocketBase MCP Server for integration with Cursor AI IDE",
+  "main": "build/index.js",
+  "bin": {
+    "pocketbase-cursor-mcp": "build/index.js"
+  },
   "scripts": {
     "build": "tsc && node -e \"require('fs').chmodSync('build/index.js', '755')\"",
     "start": "node build/index.js",
-    "dev": "tsc -w"
+    "dev": "tsc -w",
+    "prepublishOnly": "npm run build",
+    "release": "npm version patch --no-git-tag-version && npm publish",
+    "release:minor": "npm version minor --no-git-tag-version && npm publish",
+    "release:major": "npm version major --no-git-tag-version && npm publish"
   },
+  "keywords": [
+    "pocketbase",
+    "mcp",
+    "cursor",
+    "ai",
+    "ide"
+  ],
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.6.1",
-    "pocketbase": "^0.20.1"
+    "dotenv": "^16.3.1",
+    "pocketbase": "^0.20.1",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@types/node": "^20.17.10",
+    "@types/yargs": "^17.0.32",
     "typescript": "^5.3.3"
   }
 }
